--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -5,6 +5,8 @@ $font-family-sans-serif: 'Nunito',
 sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
+$enable-responsive-font-sizes:true;
+$enable-gradients:true;
 // Colors
 $primary: #2385DF;
 $blue: #3490dc;
